feat: pagination functionality

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -19,7 +19,7 @@
     margin: 10px 0;
   }
   
-  .card button {
+  /* .card button {
     margin: 5px;
     padding: 5px 10px;
     border: none;
@@ -32,4 +32,4 @@
   .card button:hover {
     background-color: #0056b3;
   }
-  
+   */
