--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -65,10 +65,26 @@
   transition: background-color 0.3s ease;
 }
 
+.card-button.added {
+  background-color: #28a745; /* Verde pentru starea "Added" */
+}
+
 .card-button:hover {
   background-color: #0056b3;
+}
+
+.card-button:hover:not(.added) {
+  background-color: #0056b3;
+}
+
+.card-button:disabled {
+  cursor: not-allowed;
+  opacity: 0.7;
 }
 
 .card-icon {
   font-size: 1.2rem;
 }
+
+
+
