--- a/src/pages/css/ProductList.css
+++ b/src/pages/css/ProductList.css
@@ -1,6 +1,6 @@
 .product-list-container {
     padding: 20px;
-    font-family: Arial, sans-serif;
+    min-height: 100%;
   }
   
   .product-list-title {
@@ -35,6 +35,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
+    margin-left: 100px;
   }
   
   .pagination {
