--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -18,12 +18,12 @@
   
   .icon {
     font-size: 20px;
-    color: #007bff;
+    color: black;
     transition: color 0.3s ease;
   }
   
   .icon:hover {
-    color: #0056b3;
+    color: gray;
   }
   
   .link-text {
