--- a/src/pages/css/ProductList.css
+++ b/src/pages/css/ProductList.css
@@ -22,6 +22,7 @@
   border-radius: 5px;
   border: 1px solid #ccc;
   font-size: 16px;
+  margin-left: 110px;
 }
 
 .price-filter label {
@@ -36,7 +37,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-  margin-left: 100px;
+  margin:0 100px ;
 }
 
 .pagination {
@@ -64,7 +65,7 @@
   font-weight: bold;
 }
 
-/* Responsivitate pentru telefoane mobile (max-width: 600px) */
+
 @media (max-width: 600px) {
   .filters {
     flex-direction: column;
@@ -75,7 +76,7 @@
   .product-grid {
     grid-template-columns: 1fr;
     gap: 10px;
-    margin-left: 0;
+    margin: 0;
   }
 
   .product-list-title {
@@ -86,6 +87,7 @@
   .category-filter,
   .price-filter {
     width: 100%;
+    margin: 10px;
   }
 
   .pagination button {
