fix: page height

--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -59,8 +59,11 @@
 }
 
 .card-button {
-  padding: 10px 20px;
-  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  padding: 8px 12px;
+  font-size: 0.9rem;
   font-weight: bold;
   color: white;
   background: linear-gradient(to right, #05a95c, #02c39a);
@@ -69,6 +72,9 @@
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
+  background-clip: padding-box;
+  position: relative;
+  overflow: hidden;
 }
 
 .card-button::before {
